[package]
name = "rasblocker_pro"
version = "1.0.0"
description = "RasBlocker Pro - Tauri Edition"
authors = ["Rasel Mia"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all" ] }
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
